--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body, html
 {
 	height: 100%;
+	overflow: hidden;
 }
 
 nav
@@ -8,9 +9,12 @@ nav
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 200px;
+	width: 15%;
 	height: 100%;
 	background-color: #f00;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 	.navLink
@@ -35,8 +39,8 @@ nav
 iframe
 {
 	height: 100%;
-	width: 100%;
+	width: 85%;
 	position: fixed;
-	left: 200px;
+	left: 15%;
 	top: 0;
 }
